@@ -664,7 +664,10 @@ ags_lv2_manager_find_lv2_plugin_with_fallback(AgsLv2Manager *lv2_manager,
 
   if(!AGS_IS_LV2_MANAGER(lv2_manager) ||
      filename == NULL ||
-     effect == NULL){
+     strlen(filename) <= 0 ||
+     strrchr(filename, "/") == NULL ||
+     effect == NULL ||
+     strlen(effect) <= 0){
     return(NULL);
   }
   
